# zfsnappr

./: pyproject.toml
src/zfsnappr/: argparser.py  args.py  arguments.py  cli.py  entrypoint.py  setup_logging.py  utils.py
src/zfsnappr/commands/create/: args.py  entrypoint.py
src/zfsnappr/commands/list/: args.py  entrypoint.py
src/zfsnappr/commands/prune/: __init__.py  args.py  entrypoint.py  grouping.py  policy.py  prune_snaps.py
src/zfsnappr/commands/pull/: __init__.py  args.py  entrypoint.py
src/zfsnappr/commands/push/: __init__.py  args.py  entrypoint.py
src/zfsnappr/commands/tag/: args.py  entrypoint.py
src/zfsnappr/commands/unhold/: args.py  entrypoint.py
src/zfsnappr/commands/version/: args.py  entrypoint.py
src/zfsnappr/common/: args.py  exception.py  filter.py  sort.py  utils.py  zfs.py
src/zfsnappr/common/replication/: __init__.py  parse_remote.py  replicate.py  replicate_hierarchy.py  replicate_snaps.py  send_receive_snap.py
src/zfsnappr/create/: arguments.py  entrypoint.py
src/zfsnappr/list/: arguments.py  entrypoint.py
src/zfsnappr/prune/: arguments.py  entrypoint.py
src/zfsnappr/pull/: arguments.py  entrypoint.py
src/zfsnappr/push/: arguments.py  entrypoint.py
src/zfsnappr/tag/: arguments.py  entrypoint.py
src/zfsnappr/version/: arguments.py  entrypoint.py
